add nodemailer to addPerson controller
